--- a/style.css
+++ b/style.css
@@ -32,10 +32,60 @@ body{
 .menuHamburguer div{
     width: 18px;
     height: 2px;
-    background-color: #333333;
     margin-bottom: 3px;
 
 }
+
+.sidepanel  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 250px;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidepanel a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidepanel a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
+
+  .openbtn div {
+      background-color: #586489;
+  }
+  
+  .openbtn:hover {
+    background-color:#444;
+  }
+
+
 
 .formulario{
     display: flex;
@@ -159,7 +209,6 @@ body{
 #cabecalho-tabela-valor{
     padding-right: 42px;
 }
-
 
 .footer{
     border: 6px solid  #333333;
