--- a/style.css
+++ b/style.css
@@ -76,19 +76,27 @@ main{
   font-size: 25px;
 }
 
-.formulario {
+
+.formulario{
   display: flex;
   justify-content: center;
   margin: 0 auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+ 
 }
 
-.formulario form {
+.formulario  form {
   width: 90%;
   display: flex;
   margin-top: 10px;
+  flex-direction: column;
+
+}
+
+.formulario form .transacao, .nome-mercadoria, .valor{
+  display: flex;
   flex-direction: column;
 }
 
@@ -105,7 +113,7 @@ main{
   line-height: 22px;
 }
 
-.formulario form select {
+.formulario form .transacao select {
   height: 32px;
   border-radius: 4px;
   border: 1px solid #979797;
@@ -124,7 +132,8 @@ main{
 .formulario form input[type="number"] {
   font-family: "Inter", sans-serif;
 }
-.formulario form input[type="submit"] {
+.formulario form .menu-adicionar input[type="submit"] {
+  width: 100%;
   margin-top: 19.78px;
   height: 32px;
   border-radius: 4px;
@@ -224,6 +233,150 @@ main{
   display: block;
 }
 
+.formulario{
+  border: 1px solid #979797;
+  margin: 20px;
+  border-radius: 4px;
+}
 
+.menu-adicionar{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+
+.formulario form .menu-adicionar input[type="submit"] {
+  
+  width: 200px;
+  margin-bottom: 20px;
+}
+.formulario form .menu-adicionar{
+  width: 100%;
+  text-align: end;
+}
+
+.formulario form .transacao{
+    width: 20%;
+    margin-right: 20px;
+}
+.formulario form .nome-mercadoria{
+  width: 54%;
+  margin-right: 20px;
+}
+.formulario form .valor{
+  width: 20%;
+}
+
+.formulario form{
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 95%;
+}
+
+.linha{
+  display: none;
+}
+
+.espaco-simbolo {
+  padding-left: 0px;
+
+}
+.alinhamento-esquerdo {
+  padding-left: 0px;
+}
+#cabecalho-tabela-valor {
+  padding-right: 20px; 
+}
+.alinhamento-direito{
+  padding-right: 20px;
+}
+.lucro{
+  padding-right: 20px;
+}
+
+
+
+
+}
+
+
+@media (min-width: 1112px){
+
+  .formulario h2{
+    display: block;
+  }
+  
+  .formulario{
+    border: 1px solid #979797;
+    margin: 20px;
+    border-radius: 4px;
+    width: 40%;
+  }
+
+  .menu-adicionar{
+    display: flex;
+    align-items: center;
+  
+  }
+
+  
+  .formulario form .menu-adicionar{
+    width: 100%;
+  }
+  
+  .formulario form .transacao{
+      width: 100%;
+    
+  }
+  .formulario form .nome-mercadoria{
+    width: 100%;
+   
+  }
+  .formulario form .valor{
+    width: 100%;
+  }
+  
+  .formulario form{
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+  }
+  
+  .linha{
+    display: none;
+  }
+  
+  .espaco-simbolo {
+    padding-left: 10px;
+  
+  }
+  .alinhamento-esquerdo {
+    padding-left: 11px;
+  }
+  #cabecalho-tabela-valor {
+    padding-right: 10px; 
+  }
+  .alinhamento-direito{
+    padding-right: 10px;
+  }
+  .lucro{
+    padding-right: 10px;
+  }
+
+  .tabela-extrato{
+    width: 55%;
+  }
+
+  .icon-menu{
+    display: none;
+  }
+  main{
+    display: flex;
+    flex-direction: row;
+  }
+  .formulario form .menu-adicionar input[type="submit"] {
+    margin-bottom: 20px;
+    width: 100%;
+}
 
 }
